versioned_docs/version-3.0/introduction.md
---
title: Introduction
slug: /
description: Deploy Ant Media Server to your choice of cloud within minutes.
keywords: [Free Streaming Server Software, Ant Media Community v/s Enterprise Edition, Use Cases, Streaming Software for Classroom, Live Streaming Server Software]
sidebar_position: 1
---


# Introduction to Ant Media Server

Ant Media Server (AMS) is a scalable, real-time video streaming platform designed for ultra-low latency live streaming and interactive broadcasting.

Built around WebRTC and adaptive streaming technologies, AMS enables organizations to deliver live video with sub-second latency while supporting large-scale audience delivery through HLS, LL-HLS, CMAF, and DASH streaming protocols.

Ant Media Server supports multiple ingest protocols including WebRTC, RTMP, SRT, RTSP, WHIP, and NDI, along with modern codec support such as AV1, providing flexible streaming workflows for browsers, mobile devices, and broadcasting infrastructures.

AMS is available in two editions:
- Community Edition — Open-source streaming server suitable for standard streaming and development workloads.
- Enterprise Edition — Advanced streaming platform with ultra-low latency delivery, adaptive bitrate streaming, clustering, GPU acceleration, enterprise security, and professional support.

Ant Media Server is available in two versions: **Community Edition** and **Enterprise Edition**. A table of comparisons is provided below.

Ant Media Server can be deployed on-premises, in air-gapped environments, on Kubernetes and Docker infrastructures, or on major public cloud providers including AWS, Azure, Google Cloud, Oracle Cloud, and DigitalOcean.

The platform supports both standalone and clustered deployments, enabling deployments ranging from a single streaming server to large-scale distributed streaming infrastructures capable of supporting thousands of concurrent publishers and viewers.

AMS also provides SDKs and APIs for JavaScript, iOS, Android, Flutter, React Native, and Unity, allowing developers to build interactive real-time streaming applications for use cases such as webinars, auctions, telehealth, online education, gaming, surveillance, and live broadcasting.

## Usage Scenarios

### 👨🏽‍💻 Online Education & Virtual Classrooms

Build interactive virtual classroom platforms with ultra-low latency communication between instructors and students using WebRTC-based real-time streaming.

Ant Media Server supports one-to-one and one-to-many streaming workflows for online education, remote training, and live tutoring platforms.

### 🤖 IP camera streaming

Watch and Monitor IP cameras with ultra-low latency on a web browser with Ant Media Server. You can embed ONVIF IP camera streams into your websites and mobile applications. [Read more](https://antmedia.io/solutions/ip-camera-streaming/)

### 🙇 Webinars & Video Conferencing

Ant Media Server supports N-N live video/audio conferencing by using WebRTC, allowing you to achieve ultra-low latency (~ 0.5 sec). Ant Media Server also provides scalability, which can help you scale up your solution dynamically. [Read more](https://antmedia.io/solutions/webinar-e-learning-virtual-classroom/) 

### 👾 Mobile streaming application

Using our SDKs, you can integrate your mobile application solutions with Ant Media Server and build a fast, reliable, and stable streaming platform with AMS APIs and SDKs. [Read more](https://antmedia.io/docs/category/sdk-integration/) 

### 📺 Live Game shows

Live video experience has a significant role in live game show success, with the strong requirement of being scalable and having low latency. [Read more](https://antmedia.io/solutions/media-entertainment/) 

### 🎯 E-sports & Betting streaming   

Due to the ever-growing e-sports domain, there is a tremendous demand for video streaming with ultra-low latency. [Read more](https://antmedia.io/solutions/video-game-streaming/)

### 🎭 Live Auctions and Bidding 

Live auctions should be streamed with ultra-sub-second latency in order to get bids on time. [Read more](https://antmedia.io/solutions/auction-bidding/)

### ✨ Video Game streaming 

Ant Media Server resolves interactivity and scalability issues by providing ultra-low-latency streaming via WebRTC. [Read more](https://antmedia.io/solutions/video-game-streaming/)

### 🎭 Telehealth & Remote Consultation

Develop secure telehealth platforms that enable real-time communication between doctors and patients.

AMS provides low-latency video streaming suitable for remote consultation, patient monitoring, and healthcare communication systems. [Read more](https://antmedia.io/solutions/telehealth/)

### 📺 Broadcast & OTT Streaming

Deploy scalable live broadcasting and OTT streaming infrastructures using adaptive bitrate streaming, clustering, playlist scheduling, and multi-protocol delivery.

AMS supports large-scale media distribution workflows for broadcasters, content providers, and enterprise streaming platforms.

### 🤖 AI, Analytics & Computer Vision Workflows

Use Ant Media Server as a real-time video ingestion and distribution layer for AI-powered video analytics, object detection, computer vision, and edge processing applications.

AMS supports scalable real-time video transport pipelines for intelligent video processing systems.


### Community and Enterprise Edition Comparison

|               **Feature**               |         **Community Edition**         |        **Enterprise Edition**        |
| :----------------------------------------: | :-------------------------------------: | :------------------------------------: |
|       One-to-Many WebRTC Streaming       | ![false](@site/static/img/cross.png ) | ![false](@site/static/img/tick.png ) |
|            End-to-End Latency            |             8-12 Seconds             |         0.5 Seconds (500ms)         |
|             LL-DASH(CMAF)                | ![false](@site/static/img/cross.png ) | ![false](@site/static/img/tick.png ) |
|               Auto Scaling               | ![false](@site/static/img/cross.png ) | ![false](@site/static/img/tick.png ) |
|            Kubernetes Support            | ![false](@site/static/img/cross.png ) | ![false](@site/static/img/tick.png ) |
|   RTMP (Ingesting) to WebRTC (Playing)   | ![false](@site/static/img/cross.png ) | ![false](@site/static/img/tick.png ) |
| Hardware Encoding(Nvidia GPU, QuickSync) | ![false](@site/static/img/cross.png ) | ![false](@site/static/img/tick.png ) |
|           WebRTC Data Channel            | ![false](@site/static/img/cross.png ) | ![false](@site/static/img/tick.png ) |
|             Adaptive Bitrate             | ![false](@site/static/img/cross.png ) | ![false](@site/static/img/tick.png ) |
|             Secure Streaming             | ![false](@site/static/img/cross.png ) | ![false](@site/static/img/tick.png ) |
|            SRT ingest support            | ![false](@site/static/img/cross.png ) | ![false](@site/static/img/tick.png ) |
|            NDI ingest support            | ![false](@site/static/img/cross.png ) | ![false](@site/static/img/tick.png ) |
|         iOS & Android WebRTC SDK         | ![false](@site/static/img/cross.png ) | ![false](@site/static/img/tick.png ) |
|          VP8 and H.265 Support           | ![false](@site/static/img/cross.png ) | ![false](@site/static/img/tick.png ) |
|                 WHIP                     | ![false](@site/static/img/cross.png ) | ![false](@site/static/img/tick.png ) |
|             iOS & Android SDK            | ![false](@site/static/img/tick.png ) | ![false](@site/static/img/tick.png ) |
|              JavaScript SDK              | ![false](@site/static/img/tick.png ) | ![false](@site/static/img/tick.png ) |
|                 AV1                      | ![false](@site/static/img/cross.png) | ![false](@site/static/img/tick.png ) |
|     RTMP, RTSP, MP4 and HLS Support      | ![false](@site/static/img/tick.png ) | ![false](@site/static/img/tick.png ) |
|           LL-HLS (Paid plugin)           | ![false](@site/static/img/tick.png ) | ![false](@site/static/img/tick.png ) |
|           SCTE-35 Plugin                 | ![false](@site/static/img/tick.png ) | ![false](@site/static/img/tick.png ) |
|          WebRTC to RTMP Adapter          | ![false](@site/static/img/tick.png ) | ![false](@site/static/img/tick.png ) |
|      360 Degree Live & VoD Streams       | ![false](@site/static/img/tick.png ) | ![false](@site/static/img/tick.png ) |
|         Web Management Dashboard         | ![false](@site/static/img/tick.png ) | ![false](@site/static/img/tick.png ) |
|            IP Camera Support             | ![false](@site/static/img/tick.png ) | ![false](@site/static/img/tick.png ) |
|         Re-stream to End Points          | ![false](@site/static/img/tick.png ) | ![false](@site/static/img/tick.png ) |
|                  WHIP                    | ![false](@site/static/img/tick.png ) | ![false](@site/static/img/tick.png ) |
|               Open Source                | ![false](@site/static/img/tick.png ) | ![false](@site/static/img/tick.png ) |
|      Linear Live Streaming (Playlist)    | ![false](@site/static/img/tick.png ) | ![false](@site/static/img/tick.png ) |
|  Simulcast to all Social Media via RTMP  | ![false](@site/static/img/tick.png ) | ![false](@site/static/img/tick.png ) |
|  Recording (MP4,WebM,HLS)                | ![false](@site/static/img/cross.png ) | ![false](@site/static/img/tick.png ) |
|                 Support                  |               Community               |           E-mail, Slack           |
|                  Price                   |                 Free                 |                 Paid                 |

## Community Edition and Enterprise Edition Releases

 - You can download the Ant Media Server Community Edition from
   [Github](https://github.com/ant-media/Ant-Media-Server/releases/)
   directly.
 - You can download the Ant Media Server Enterprise Edition package from your
   [antmedia account](https://antmedia.io/my-account/) after purchasing the license.

## Licensing

Ant Media Server has two types of licenses.

 - Ant Media Server Community Edition is free to use with Apache
   license.
- Ant Media Server Enterprise Edition requires a paid license per instance/server. Paid license options include monthly, annual, and perpetual licenses, which can be purchased directly from [antmedia.io](https://antmedia.io).

### Enterprise Edition Cluster License

The Enterprise Edition cluster license has similar features to the standard Enterprise Edition license. The only difference is that the Enterprise Cluster license supports many instances running simultaneously with the same license key. The standard Enterprise Edition license only supports one instance at a time.

If you're planning to have a large deployment for your Enterprise Cluster, please contact Sales at [contact@antmedia.io](mailto:contact@antmedia.io) to discuss discount options.

### Free Enterprise Edition license for educational and tech communities

Ant Media provides **free Enterprise Edition licenses** for students, academics, and communities. To take advantage of this opportunity, just send an email from your institution or community e-mail address to [contact@antmedia.io](mailto:contact@antmedia.io)

## Functional Architecture

![server architecture diagram](/img/image-1648754379709.png)

## Supported Environments

Ant Media can be installed on Linux, specifically Ubuntu (18.04, 20.04, 22.04 and 24.04), CentOS (8 and 9), Rocky Linux (8 and 9), and Alma Linux (8 and 9). It is compatible with both the x86-64 and Arm64 architectures.

To run AMS on a single instance, you'll need at least 4 vCPU dedicated compute optimized servers with 8 GB of RAM. In terms of smooth read-write performance, SSD disks are highly recommended.

There are several installation methods available, including deployment to a full VM, Docker or Kubernetes.

## Ant Media Community discussion

There is a user community available. You can ask or answer questions by joining the community at [GitHub Discussions](https://github.com/orgs/ant-media/discussions)

You can also ask your questions in [Discussions Q&A](https://github.com/orgs/ant-media/discussions/categories/q-a)

## Contact

For more information and to read our latest [blog posts](https://antmedia.io/blog/) visit [antmedia.io](https://antmedia.io/). If you have any questions, please send an email to [contact@antmedia.io](mailto:contact@antmedia.io). Support inquiries should go to [support@antmedia.io](mailto:support@antmedia.io).
